update run command [skip tests]

--- a/.github/actions/tck-tests/action.yml
+++ b/.github/actions/tck-tests/action.yml
@@ -27,9 +27,7 @@ runs:
         password: ${{ inputs.github-token }}
     - name: Docker Compose Up
       shell: bash
-      run: |
-        cd ${{ env.tck }}
-        docker compose up -d
+      run: docker compose -f ./ingestion-connector-tck/compose.yaml up -d
     - name: "Set up JDK"
       uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
     - name: "Build application"
@@ -44,6 +42,4 @@ runs:
       run: docker logs ingestion-connector-tck-api-1
     - name: Docker Compose Down
       shell: bash
-      run: |
-        cd ${{ env.tck }}
-        docker compose down
+      run: docker compose -f ./ingestion-connector-tck/compose.yaml down
