check with env pat token [skip tests]

--- a/.github/actions/tck-tests/action.yml
+++ b/.github/actions/tck-tests/action.yml
@@ -26,8 +26,10 @@ runs:
         username: ${{ github.actor }}
         password: ${{ inputs.github-token }}
     - name: "Docker Compose Up"
-      shell: bash
-      run: docker compose -f ./ingestion-connector-tck/compose.yaml up -d
+      uses: HylandSoftware/ingestion-connector-tck-actions/docker-compose-up@main
+      env:
+        token: ${{ inputs.hyland-tck-pat }}
+        working-directory: ${{ env.tck }}
     - name: "Set up JDK"
       uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
     - name: "Build application"
@@ -41,5 +43,6 @@ runs:
       shell: bash
       run: docker logs ingestion-connector-tck-api-1
     - name: "Docker Compose Down"
-      shell: bash
-      run: docker compose -f ./ingestion-connector-tck/compose.yaml down
+      uses: HylandSoftware/ingestion-connector-tck-actions/docker-compose-down@main
+      with:
+        working-directory: ${{ env.tck }}
