return to direct commands [skip tests]

--- a/.github/actions/tck-tests/action.yml
+++ b/.github/actions/tck-tests/action.yml
@@ -7,9 +7,6 @@ inputs:
   maven-cli-opts:
     description: Maven options string
     default: ''
-  github-token:
-    description: GitHub token for GHCR login
-    required: true
 runs:
   using: "composite"
   steps:
@@ -19,17 +16,9 @@ runs:
       run: ./scripts/ci/cloneTCK.sh
       env:
         GITHUB_TOKEN: ${{ inputs.hyland-tck-pat }}
-    - name: "GHCR Login"
-      uses: docker/login-action@v3.4.0
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ inputs.github-token }}
     - name: "Docker Compose Up"
-      uses: HylandSoftware/ingestion-connector-tck-actions/docker-compose-up@main
-      env:
-        token: ${{ inputs.hyland-tck-pat }}
-        working-directory: ${{ env.tck }}
+      shell: bash
+      run: docker compose -f ./ingestion-connector-tck/compose.yaml up -d
     - name: "Set up JDK"
       uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.14.1
     - name: "Build application"
@@ -43,6 +32,5 @@ runs:
       shell: bash
       run: docker logs ingestion-connector-tck-api-1
     - name: "Docker Compose Down"
-      uses: HylandSoftware/ingestion-connector-tck-actions/docker-compose-down@main
-      with:
-        working-directory: ${{ env.tck }}
+      shell: bash
+      run: docker compose -f ./ingestion-connector-tck/compose.yaml down
