--- a/.github/actions/tck-tests/action.yml
+++ b/.github/actions/tck-tests/action.yml
@@ -7,6 +7,9 @@ inputs:
   maven-cli-opts:
     description: Maven options string
     default: ''
+  github-token:
+    description: GitHub token for GHCR login
+    required: true
 runs:
   using: "composite"
   steps:
@@ -16,6 +19,12 @@ runs:
       run: ./scripts/ci/cloneTCK.sh
       env:
         GITHUB_TOKEN: ${{ inputs.hyland-tck-pat }}
+    - name: "GHCR Login"
+      uses: docker/login-action@v3.4.0
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ inputs.github-token }}
     - name: "Docker Compose Up"
       shell: bash
       run: docker compose -f ./ingestion-connector-tck/compose.yaml up -d
