initial implementation of loose object type

--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-thumbnail.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-thumbnail.yml
@@ -40,18 +40,9 @@ body: [
       },
       "cm:contentPropertyName": {
         "value": {
-          "namespaceURI": {
-            "type": "string",
-            "value": "http://www.alfresco.org/model/content/1.0"
-          },
-          "localName": {
-            "type": "string",
-            "value": "content"
-          },
-          "prefixString": {
-            "type": "string",
-            "value": "content"
-          }
+          "namespaceURI": "http://www.alfresco.org/model/content/1.0",
+          "localName": "content",
+          "prefixString": "content"
         },
         "type": "object"
       },
