--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,8 +134,9 @@ jobs:
       - name: "Upload coverage report"
         uses: actions/upload-artifact@v4
         with:
-          name: jacoco-coverage-report
+          name: Jacoco coverage report
           path: |
+            ${{ github.workspace }}/**/target/site/jacoco/jacoco.html
             ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
           retention-days: 7
           if-no-files-found: warn
