feat(CIN-3844): add code coverage report jacoco implementation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,8 @@ jobs:
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.19.1
       - name: "Build and test code coverage"
         run: |
-          mvn ${{ env.MAVEN_CLI_OPTS }} clean verify -DskipE2eTests=true \
+          mvn ${{ env.MAVEN_CLI_OPTS }} clean verify \
+            -DskipE2eTests \
             -Djacoco.destFile=target/jacoco.exec \
             -Djacoco.propertyName=argLine
 
